# Dinosaur

./: CMakeLists.txt  README.md
assets/: source.txt
include/: game.hpp  obstacle.hpp  player.hpp  resource_manager.hpp
src/: game.cpp  main.cpp  obstacle.cpp  player.cpp
